python-apt (0.7.93.4) unstable; urgency=low

  * python/acquire-item.cc:
    - Add AcquireItem.partialsize member.
  * python/generic.cc:
    - Map UntranslatedDepType to dep_type_untranslated.
  * python/tag.cc:
    - Hack the TagFile iterator to not use shared storage (Closes: #572596):
      Scan once, duplicate the section data, and scan again.
  * apt/package.py:
    - Create a string class BaseDependency.__dstr which makes '>' equal to
      '>>' and '<' equal to '<<' (compatibility).
    - Use the binary package version in Version.fetch_source() if the
      source version is not specified (i.e. in the normal case).
    - Always return unicode strings in Package.get_changelog (Closes: #572998).
  * apt/progress/text.py:
    - Drop InstallProgress, it's useless to keep this alias around.
  * apt/progress/old.py:
    - Let the new method call the old one; e.g. status_update() now calls
      self.statusUpdate(). This improves compatibility for sub classes.
  * Merge with Ubuntu:
    - util/get_ubuntu_mirrors_from_lp.py:
      + rewritten to use +archivemirrors-rss and feedburner
    - pre-build.sh: update ubuntu mirrors on bzr-buildpackage (and also do this
      for Debian mirrors)
    - add break for packagekit-backend-apt (<= 0.4.8-0ubuntu4)
  * tests/data/aptsources/sources.list.testDistribution:
    - change one mirror which is not on the mirror list anymore.
  * utils/get_debian_mirrors.py:
    - Parse Mirrors.masterlist instead of the HTML web page.
  * utils/get_ubuntu_mirrors_from_lp.py:
    - Sort the mirror list of each country.

 -- Julian Andres Klode <jak@debian.org>  Mon, 01 Mar 2010 16:13:22 +0100

python-apt (0.7.93.3) unstable; urgency=low

  * data/templates/Ubuntu.info.in:
    - Use generic MirrorsFile key instead of per-architecture ones in
      order to fix FTBFS on !amd64 !i386 (Closes: #571752)

 -- Julian Andres Klode <jak@debian.org>  Sat, 27 Feb 2010 23:26:45 +0100

python-apt (0.7.93.2) unstable; urgency=low
